--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -52,7 +52,7 @@ p {
 }
 
 img {
-  width: 4.5rem;
+  width: 100%;
   line-height: 1.2;
   margin-left: -5px;
 }
@@ -61,6 +61,7 @@ img {
   align-self: flex-start;
   padding: 3px 13px 23px 0;
   font-weight: 400;
+  width: 15%;
 }
 
 .company-title {
@@ -122,5 +123,23 @@ img {
 }
 
 .hero * {
-  z-index: 10;
+  z-index: 1;
+}
+
+/* Icons */
+.icons {
+  padding: 30px;
+}
+
+.icons h3 {
+  font-weight: bold; 
+  margin-bottom: 15px;
+}
+
+.icons i {
+  background: #4CBCC0;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 50%;
+  margin-bottom: 15px;
 }
