--- a/ChristinaWebsite/css/utilities.css
+++ b/ChristinaWebsite/css/utilities.css
@@ -12,36 +12,36 @@
   cursor: pointer;
   display: inline-block;
   padding: 10px 30px;
-  color: #fff;
-  background-color: #3e9699;
+  color: #2e6264;
+  background-color: #fff;
   border-radius: 5px;
   opacity: .9;
 }
 
 .btn:hover {
   opacity: .9;
-  color: #4CBCC0;
+  color: #2e6264;
   background: #f4f4f4;
 }
 
-.btn-primary {
+.btn-primary, .bg-primary {
   background: #4CBCC0;
   color: #fff;
 }
 
-.btn-secondary {
+.btn-secondary, .bg-secondary {
   background: #CF8D3B;
   color: #fff;
 }
 
-.btn-dark {
+.btn-dark, .bg-dark {
   background: #333;
   color: #fff;
 }
 
-.btn-light {
-  background: #f4f4f4;
-  color: #333;
+.btn-light .bg-light {
+  background: #fff;
+  color: #4CBCC0;
 }
 
 /* Flex Items */
@@ -55,3 +55,30 @@
 .flex-items > div {
   padding: 20px;
 }
+
+/* Flex columns */
+.flex-columns .row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.flex-columns .column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.flex-columns .column .column-1,
+.flex-columns .column .column-2 {
+  height: 100%;
+}
+
+.flex-columns img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
