--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -49,23 +49,22 @@ p {
 .container {
   display: flex;
   margin-top: 1.2rem;
+  margin-left: -10px;
 }
 
 img {
   width: 100%;
-  line-height: 1.2;
-  margin-left: -5px;
 }
 
 .img-1 {
   align-self: flex-start;
-  padding: 3px 13px 23px 0;
   font-weight: 400;
-  width: 15%;
+  width: 3.4rem;
+  padding: 0 14px 15px 0;
 }
 
 .company-title {
-  padding-top: 15px;
+  padding-top: 2px;
 }
 
 .navbar a {
@@ -102,8 +101,7 @@ img {
 
 .hero .content h1 {
   font-size: 55px;
-  padding-top: 150px;
-  
+  padding-top: 150px; 
 }
 
 .hero .content p {
@@ -142,4 +140,10 @@ img {
   padding: 1rem;
   border-radius: 50%;
   margin-bottom: 15px;
+}
+
+
+
+.cases img:hover {
+  opacity: 0.7;
 }
