--- a/ChristinaWebsite/css/utilities.css
+++ b/ChristinaWebsite/css/utilities.css
@@ -12,10 +12,10 @@
   cursor: pointer;
   display: inline-block;
   padding: 10px 30px;
-  color: #2e6264;
-  background-color: #fff;
+  color: #fff;
+  background-color: #2e6264;
+  border: none;
   border-radius: 5px;
-  opacity: .9;
 }
 
 .btn:hover {
@@ -30,7 +30,7 @@
 }
 
 .btn-secondary, .bg-secondary {
-  background: #CF8D3B;
+  background: #DBC9BA;
   color: #fff;
 }
 
@@ -42,6 +42,11 @@
 .btn-light .bg-light {
   background: #fff;
   color: #4CBCC0;
+}
+
+.btn-outline {
+  background: transparent;
+  border: 1px solid #fff;
 }
 
 /* Flex Items */
@@ -57,6 +62,10 @@
 }
 
 /* Flex columns */
+.flex-columns.flex-reverse .row {
+  flex-direction: row-reverse;
+}
+
 .flex-columns .row {
   display: flex;
   flex-direction: row;
@@ -82,3 +91,55 @@
   object-fit: cover;
 }
 
+.flex-columns .column-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 20px;
+}
+
+.flex-columns h4 {
+  margin-bottom: 10px;
+}
+
+.flex-columns h2 {
+  font-size: 40px;
+  font-weight: 100;
+}
+
+.flex-columns p {
+  margin: 20px 0;
+}
+
+/* Section Header */
+.section-header {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.section-header h2 {
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+.section-padding {
+  padding: 20px 20px 40px;
+}
+
+/* Flex Grid */
+.flex-grid .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.flex-grid .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
