--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -142,8 +142,16 @@ img {
   margin-bottom: 15px;
 }
 
-
-
 .cases img:hover {
   opacity: 0.7;
+}
+
+.cases .column {
+  object-fit: cover;
+  max-height: 100%;
+  width: auto;
+}
+
+.states img {
+  border-radius: 50%;
 }
