--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -165,7 +165,7 @@ img {
 
 .callback-form label {
   display: block;
-  margin-bottom:
+  margin-bottom: 20px;
 }
 
 .callback-form .form-control {
