--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -18,7 +18,7 @@ ul {
 }
 
 a {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -182,4 +182,22 @@ img {
 .callback-form .btn {
   padding: 12px 0;
   margin-top: 20px;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 120px;
+}
+
+.footer a:hover {
+  color:#4CBCC0
+}
+
+.footer .social > * {
+  margin-right: 30px;
 }
