--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -152,6 +152,9 @@ img {
   width: auto;
 }
 
+.column .column-2 {
+  padding-bottom: 10px;
+}
 .states img {
   border-radius: 50%;
 }
@@ -200,4 +203,32 @@ img {
 
 .footer .social > * {
   margin-right: 30px;
+}
+
+/* Mobile */
+@media(max-width:768px) {
+  .navbar {
+    flex-direction: column;
+    height: 130px;
+    padding: 0 40px 0;
+    text-align: center;
+  }
+
+  .navbar .img-1 {
+    margin-right: -20px;
+  }
+
+  .navbar a {
+    padding: 10px 10px;
+    margin: 0 3px 5px;
+  }
+
+  .flex-items {
+    flex-direction: column;
+  }
+
+  .flex-columns .column, .flex-grid .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
