--- a/ChristinaWebsite/css/style.css
+++ b/ChristinaWebsite/css/style.css
@@ -50,8 +50,7 @@ p {
 
 .container {
   display: flex;
-  margin-top: 1.2rem;
-  margin-left: -10px;
+  align-items: center;
 }
 
 img {
@@ -59,11 +58,17 @@ img {
 }
 
 .img-1 {
-  align-self: flex-start;
   font-weight: 400;
-  width: 3rem;
-  margin: -1px 5px;
-  padding: 4px 0px 0px;
+  width: 2.8rem;
+  padding-right: 5px;
+}
+
+.company-title {
+  font-size: 33;
+}
+
+.company-title-2 {
+  font-size: 30px;
 }
 
 .navbar a {
@@ -125,8 +130,8 @@ img {
 }
 
 .hero.blog {
-  background: url('../img/home/sigmund-B-x4VaIriRc-unsplash.jpg') no-repeat center center/cover;
-  height: 30vh;
+  background: url('../img/home/blogtype2.jpg') no-repeat center center/cover;
+  height: 35vh;
 }
 
 /* Icons */
@@ -192,6 +197,29 @@ img {
   margin-top: 20px;
 }
 
+/* Post */
+.post {
+  padding: 50px 30px;
+}
+
+.post h2 {
+  font-size: 40px;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: #ccc solid 1px;
+}
+
+.post .meta {
+  margin-bottom: 30px;
+}
+
+.post img {
+  width: 300px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 30px;
+}
+
 /* Footer */
 .footer {
   display: flex;
@@ -214,29 +242,31 @@ img {
 @media(max-width:500px) {
   .navbar {
     flex-direction: column;
-    height: 120px;
-    padding: 4px 40px 10px;
+    height: 110px;
+    padding: 5px 10px 10px;
     text-align: center;
-  }
-  
-  .container {  
-    width: 100%;
-    white-space: nowrap;
-    margin-right: 35px;
-  }
-  
-  .img-1 {
-    margin: -2px 5px;
   }
 
   .navbar a {
-    padding: 10px 5px;
+    padding: 20px 6px 10px;
+    font-size: 12px;
+  }
+
+  .company-title {
+    font-size: 24px;
+  }
+  
+  .navbar .img-1 { 
+    width: 1.4em;
+  } 
+
+  .company-title-2 {
+    font-size: 20px;
   }
   
   .hero .content h1 {
     font-size: 30px;
-    padding: 50px 0 0;
-    font-weight: 575;
+    font-weight: 800;
   }
 
   .hero .content p {
@@ -246,7 +276,11 @@ img {
 
   .hero {
     height: 100%;
-    padding: 20px 0;
+    padding: 30px 0;
+  }
+
+  .blog h1 {
+    margin-bottom: auto;
   }
 
   .content {
@@ -271,27 +305,29 @@ img {
 @media (min-width: 501px) and (max-width: 768px) {
   .navbar {
     flex-direction: column;
-    height: 190px;
-    padding: 4px 40px 10px;
+    height: 175px;
+    padding: 20px 40px 10px;
     text-align: center;
   }
 
   .navbar ul {
-    font: 45px;
+    font-size: 45px;
   }
   .company-title {
-    font: 25px; 
+    font-size: 55px; 
+  }
+
+  .company-title-2 {
+    font-size: 48px; 
   }
   
   .navbar .img-1 {
-    padding: 5px 0px;
-    width: 5rem;
+    width: 4.8rem;
+    margin-right: 4px;
   }
 
   .navbar a {
-    padding: 20px 30px;
-    margin: 0 3px 5px;
-    font-size: 24px;
+    font-size: 25px;
   }
 
   .flex-items {
