--- a/ChristinaWebsite/css/utilities.css
+++ b/ChristinaWebsite/css/utilities.css
@@ -20,6 +20,7 @@
   background-color: #2e6264;
   border: none;
   border-radius: 5px;
+  z-index: 7;
 }
 
 .btn-2 {
@@ -30,6 +31,7 @@
   background-color: #fff;
   border: none;
   border-radius: 5px;
+  z-index: 7;
 }
 
 .btn-2:hover {
